# EcoGrid-FacchianoCalore

./: CMakeLists.txt  README.md
Datos/: ofertas_00.csv  ofertas_10.csv  ofertas_12.csv  ofertas_14.csv  ofertas_15.csv  ofertas_18.csv
Sql/: crear_esquema.sql  schema.sql
Src/: main.cpp
Src/business/: GridManager.cpp  GridManager.hpp  LectorCSV.cpp  LectorCSV.hpp  Simulador.cpp  Simulador.hpp
Src/database/: CapaDatos.cpp  CapaDatos.hpp  ConfigReader.cpp  ConfigReader.hpp  config.ini  testsbdd.cpp
Src/model/: NodoAlmacenamiento.cpp  NodoAlmacenamiento.hpp  NodoConsumidor.cpp  NodoConsumidor.hpp  NodoProsumidor.cpp  NodoProsumidor.hpp  NodoRed.cpp  NodoRed.hpp  Orden.hpp  TransaccionEnergia.cpp  TransaccionEnergia.hpp  test.cpp  test_Consumidor  test_nodo
Src/model/Tests (Para compilar, sacar de la carpeta)/: testConsumidor.cpp  testProsumidor.cpp  test_pro
Src/model/tests (ignorar)/: testAlmacenamiento.cpp  test_bat
